# babibapp

./: Cargo.toml  README.md
apis/rust-api/: Cargo.toml
apis/rust-api/src/: error.rs  lib.rs  types.rs
clients/cli/: Cargo.toml
clients/cli/src/: lib.rs  main.rs
models/: Cargo.toml
models/src/: comment.rs  lib.rs  student.rs  teacher.rs  wrappers.rs
schema/: Cargo.toml
schema/src/: schema.rs
server/: .env  Cargo.toml  diesel.toml  example_config.toml  example_settings.toml
server/migrations/2022-02-24-205949_create_student/: up.sql
server/migrations/2022-02-26-214017_create_students/: up.sql
server/migrations/2022-02-28-184651_create_teachers/: up.sql
server/migrations/2022-02-28-211115_create_student_comments/: down.sql  up.sql
server/migrations/2022-02-28-215908_create_teacher_comments/: down.sql  up.sql
server/src/: auth.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  models.rs  routes.rs  schema.rs  settings.rs
server/src/actions/: login.rs  mod.rs  student.rs
server/src/db/: mod.rs
server/src/request/: mod.rs  student.rs  teacher.rs  token.rs  wrappers.rs
server/src/request/comment/: mod.rs  student_comment.rs  teacher_comment.rs
