[package]
name = "babibapp_models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "1.4", features = ["postgres"] }
babibapp_schema = { path = "../schema" }
