[package]
name = "babibapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
babibapp_models = { path = "../models" }
babibapp_schema = { path = "../schema" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
actix-web = "4.0"
diesel = { version = "1.4", features = ["postgres", "r2d2"] }
diesel_migrations = "1.4"
log = "0.4"
env_logger = "0.9"
chrono = "0.4"
jsonwebtoken = "8.0"
