[package]
name = "babicli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
babibapp_api = { path = "../../apis/rust-api" }
tokio = { version = "1", features = ["full"] }
dialoguer = { version = "0.10", features = ["history", "password", "completion"] }
