[package]
name = "babicli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
babibapp_api = { path = "../../apis/rust-api" }
tokio = { version = "1", features = ["full"] }
dialoguer = { version = "0.10", features = ["history", "completion"] }
clap = { version = "3.1", features = ["derive"] }
xdg = "2.4"
chrono = "0.4"
